--- a/DoctorBookingApp/DoctorBookingApp.csproj
+++ b/DoctorBookingApp/DoctorBookingApp.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>3aae1375-a503-441a-b32e-fe9f992af1b6</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
