feature: add login and register DTOs for both patient and a doctor.

--- a/DoctorBookingApp/appsettings.json
+++ b/DoctorBookingApp/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+  "Key": "ThisIsA32CharLongSecretKey123456",
+  "Issuer": "DoctorBookingAPP",
+  "Audience": "DoctorBookingClients"
+  },
   "AllowedHosts": "*"
 }
